--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Page not found
-image: images/03.jpg
+<!-- title: Page not found -->
+image: images/cognition-crisis.jpg
 permalink: /404.html
 ---
 <div class="container">
